syntax = "proto3";

package orchestrator;

option go_package = "./proto/orchestrator";

// Orchestrator service for workflow management and coordination
service OrchestratorService {
  // Workflow Management
  rpc CreateWorkflow(CreateWorkflowRequest) returns (CreateWorkflowResponse);
  rpc GetWorkflow(GetWorkflowRequest) returns (GetWorkflowResponse);
  rpc UpdateWorkflow(UpdateWorkflowRequest) returns (UpdateWorkflowResponse);
  rpc DeleteWorkflow(DeleteWorkflowRequest) returns (DeleteWorkflowResponse);
  rpc ListWorkflows(ListWorkflowsRequest) returns (ListWorkflowsResponse);
  
  // Execution Management
  rpc StartExecution(StartExecutionRequest) returns (StartExecutionResponse);
  rpc GetExecution(GetExecutionRequest) returns (GetExecutionResponse);
  rpc StopExecution(StopExecutionRequest) returns (StopExecutionResponse);
  rpc ListExecutions(ListExecutionsRequest) returns (ListExecutionsResponse);
  
  // Real-time Workflow Streaming
  rpc StreamWorkflowUpdates(StreamWorkflowRequest) returns (stream WorkflowUpdateEvent);
  rpc StreamExecutionUpdates(StreamExecutionUpdatesRequest) returns (stream ExecutionUpdateEvent);
  rpc StreamTenantActivity(StreamTenantActivityRequest) returns (stream TenantActivityEvent);
  
  // Bidirectional Communication
  rpc WorkflowChannel(stream WorkflowCommand) returns (stream WorkflowResponse);
  
  // Authentication & Authorization
  rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  
  // Tenant & Resource Management
  rpc GetTenantQuotas(GetTenantQuotasRequest) returns (GetTenantQuotasResponse);
  rpc UpdateTenantQuotas(UpdateTenantQuotasRequest) returns (UpdateTenantQuotasResponse);
  
  // Webhook Management
  rpc RegisterWebhook(RegisterWebhookRequest) returns (RegisterWebhookResponse);
  rpc UnregisterWebhook(UnregisterWebhookRequest) returns (UnregisterWebhookResponse);
  
  // Health Check
  rpc Health(HealthRequest) returns (HealthResponse);
}

// Common types
message Metadata {
  map<string, string> labels = 1;
  map<string, string> annotations = 2;
  string created_at = 3;
  string updated_at = 4;
  string tenant_id = 5;
  string user_id = 6;
}

message WorkflowNode {
  string id = 1;
  string type = 2;
  string name = 3;
  map<string, string> parameters = 4;
  repeated string dependencies = 5;
  NodePosition position = 6;
  NodePolicy policy = 7;
}

message NodePosition {
  int32 x = 1;
  int32 y = 2;
}

message NodePolicy {
  int32 timeout_seconds = 1;
  int32 retry_count = 2;
  string retry_strategy = 3;
  repeated string allowed_domains = 4;
  map<string, string> resource_limits = 5;
}

message Workflow {
  string id = 1;
  string name = 2;
  string description = 3;
  repeated WorkflowNode nodes = 4;
  repeated WorkflowEdge edges = 5;
  Metadata metadata = 6;
  WorkflowStatus status = 7;
  string version = 8;
}

message WorkflowEdge {
  string from_node = 1;
  string to_node = 2;
  string condition = 3;
}

enum WorkflowStatus {
  WORKFLOW_STATUS_UNKNOWN = 0;
  WORKFLOW_STATUS_DRAFT = 1;
  WORKFLOW_STATUS_ACTIVE = 2;
  WORKFLOW_STATUS_INACTIVE = 3;
  WORKFLOW_STATUS_DEPRECATED = 4;
}

message Execution {
  string id = 1;
  string workflow_id = 2;
  ExecutionStatus status = 3;
  string started_at = 4;
  string completed_at = 5;
  map<string, string> context = 6;
  repeated StepExecution steps = 7;
  Metadata metadata = 8;
  string trigger_data = 9;
}

message StepExecution {
  string step_id = 1;
  string node_id = 2;
  StepStatus status = 3;
  string started_at = 4;
  string completed_at = 5;
  string input_data = 6;
  string output_data = 7;
  string error_message = 8;
  int32 retry_count = 9;
}

enum ExecutionStatus {
  EXECUTION_STATUS_UNKNOWN = 0;
  EXECUTION_STATUS_PENDING = 1;
  EXECUTION_STATUS_RUNNING = 2;
  EXECUTION_STATUS_SUCCESS = 3;
  EXECUTION_STATUS_FAILED = 4;
  EXECUTION_STATUS_CANCELLED = 5;
  EXECUTION_STATUS_TIMEOUT = 6;
}

enum StepStatus {
  STEP_STATUS_UNKNOWN = 0;
  STEP_STATUS_PENDING = 1;
  STEP_STATUS_RUNNING = 2;
  STEP_STATUS_SUCCESS = 3;
  STEP_STATUS_FAILED = 4;
  STEP_STATUS_SKIPPED = 5;
  STEP_STATUS_CANCELLED = 6;
}

// Request/Response messages
message CreateWorkflowRequest {
  Workflow workflow = 1;
}

message CreateWorkflowResponse {
  Workflow workflow = 1;
  bool success = 2;
  string error_message = 3;
}

message GetWorkflowRequest {
  string workflow_id = 1;
  string tenant_id = 2;
}

message GetWorkflowResponse {
  Workflow workflow = 1;
  bool success = 2;
  string error_message = 3;
}

message UpdateWorkflowRequest {
  Workflow workflow = 1;
}

message UpdateWorkflowResponse {
  Workflow workflow = 1;
  bool success = 2;
  string error_message = 3;
}

message DeleteWorkflowRequest {
  string workflow_id = 1;
  string tenant_id = 2;
}

message DeleteWorkflowResponse {
  bool success = 1;
  string error_message = 2;
}

message ListWorkflowsRequest {
  string tenant_id = 1;
  int32 page_size = 2;
  string page_token = 3;
  string filter = 4;
}

message ListWorkflowsResponse {
  repeated Workflow workflows = 1;
  string next_page_token = 2;
  bool success = 3;
  string error_message = 4;
}

message StartExecutionRequest {
  string workflow_id = 1;
  string tenant_id = 2;
  map<string, string> context = 3;
  string trigger_data = 4;
}

message StartExecutionResponse {
  Execution execution = 1;
  bool success = 2;
  string error_message = 3;
}

message GetExecutionRequest {
  string execution_id = 1;
  string tenant_id = 2;
}

message GetExecutionResponse {
  Execution execution = 1;
  bool success = 2;
  string error_message = 3;
}

message StopExecutionRequest {
  string execution_id = 1;
  string tenant_id = 2;
  string reason = 3;
}

message StopExecutionResponse {
  bool success = 1;
  string error_message = 2;
}

message ListExecutionsRequest {
  string tenant_id = 1;
  string workflow_id = 2;
  int32 page_size = 3;
  string page_token = 4;
  string filter = 5;
}

message ListExecutionsResponse {
  repeated Execution executions = 1;
  string next_page_token = 2;
  bool success = 3;
  string error_message = 4;
}

message AuthenticateRequest {
  oneof auth_method {
    ApiKeyAuth api_key = 1;
    OAuthAuth oauth = 2;
    SSOAuth sso = 3;
  }
}

message ApiKeyAuth {
  string api_key = 1;
}

message OAuthAuth {
  string access_token = 1;
}

message SSOAuth {
  string id_token = 1;
  string provider = 2;
}

message AuthenticateResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_in = 3;
  UserInfo user_info = 4;
  bool success = 5;
  string error_message = 6;
}

message UserInfo {
  string user_id = 1;
  string tenant_id = 2;
  string email = 3;
  repeated string roles = 4;
  map<string, string> permissions = 5;
}

message ValidateTokenRequest {
  string access_token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  UserInfo user_info = 2;
  string error_message = 3;
}

message GetTenantQuotasRequest {
  string tenant_id = 1;
}

message GetTenantQuotasResponse {
  TenantQuotas quotas = 1;
  bool success = 2;
  string error_message = 3;
}

message TenantQuotas {
  int32 max_workflows = 1;
  int32 max_executions_per_minute = 2;
  int32 max_concurrent_executions = 3;
  int64 max_storage_bytes = 4;
  int32 max_webhook_calls_per_minute = 5;
}

message UpdateTenantQuotasRequest {
  string tenant_id = 1;
  TenantQuotas quotas = 2;
}

message UpdateTenantQuotasResponse {
  bool success = 1;
  string error_message = 2;
}

message RegisterWebhookRequest {
  string workflow_id = 1;
  string tenant_id = 2;
  string webhook_url = 3;
  repeated string events = 4;
  map<string, string> headers = 5;
}

message RegisterWebhookResponse {
  string webhook_id = 1;
  bool success = 2;
  string error_message = 3;
}

message UnregisterWebhookRequest {
  string webhook_id = 1;
  string tenant_id = 2;
}

message UnregisterWebhookResponse {
  bool success = 1;
  string error_message = 2;
}

message HealthRequest {
}

message HealthResponse {
  string status = 1;
  map<string, string> details = 2;
}

// Streaming Messages for Real-time Updates

// Workflow Update Streaming
message StreamWorkflowRequest {
  string tenant_id = 1;
  string workflow_id = 2; // optional, if empty streams all workflows
  repeated WorkflowEventType event_types = 3;
}

enum WorkflowEventType {
  WORKFLOW_EVENT_UNKNOWN = 0;
  WORKFLOW_CREATED = 1;
  WORKFLOW_UPDATED = 2;
  WORKFLOW_DELETED = 3;
  WORKFLOW_ACTIVATED = 4;
  WORKFLOW_DEACTIVATED = 5;
  WORKFLOW_PUBLISHED = 6;
  WORKFLOW_VALIDATION_FAILED = 7;
}

message WorkflowUpdateEvent {
  string workflow_id = 1;
  string tenant_id = 2;
  WorkflowEventType event_type = 3;
  string timestamp = 4;
  Workflow workflow = 5; // optional, for create/update events
  string user_id = 6;
  string message = 7;
  map<string, string> metadata = 8;
}

// Execution Update Streaming
message StreamExecutionUpdatesRequest {
  string tenant_id = 1;
  string workflow_id = 2; // optional
  string execution_id = 3; // optional
  repeated ExecutionEventType event_types = 4;
}

enum ExecutionEventType {
  EXECUTION_EVENT_UNKNOWN = 0;
  EXECUTION_STARTED = 1;
  EXECUTION_STEP_STARTED = 2;
  EXECUTION_STEP_COMPLETED = 3;
  EXECUTION_STEP_FAILED = 4;
  EXECUTION_COMPLETED = 5;
  EXECUTION_FAILED = 6;
  EXECUTION_CANCELLED = 7;
  EXECUTION_TIMEOUT = 8;
  EXECUTION_PAUSED = 9;
  EXECUTION_RESUMED = 10;
}

message ExecutionUpdateEvent {
  string execution_id = 1;
  string workflow_id = 2;
  string tenant_id = 3;
  ExecutionEventType event_type = 4;
  string timestamp = 5;
  ExecutionStatus status = 6;
  string step_id = 7; // optional, for step-specific events
  StepStatus step_status = 8; // optional
  string message = 9;
  map<string, string> data = 10;
  ExecutionProgress progress = 11;
}

message ExecutionProgress {
  int32 total_steps = 1;
  int32 completed_steps = 2;
  int32 failed_steps = 3;
  int32 running_steps = 4;
  int32 pending_steps = 5;
  double completion_percentage = 6;
  string estimated_completion = 7;
}

// Tenant Activity Streaming
message StreamTenantActivityRequest {
  string tenant_id = 1;
  repeated ActivityType activity_types = 2;
  string since_timestamp = 3; // optional, for historical data
}

enum ActivityType {
  ACTIVITY_UNKNOWN = 0;
  USER_LOGIN = 1;
  USER_LOGOUT = 2;
  WORKFLOW_ACTION = 3;
  EXECUTION_ACTION = 4;
  API_CALL = 5;
  WEBHOOK_TRIGGERED = 6;
  QUOTA_EXCEEDED = 7;
  SECURITY_EVENT = 8;
  SYSTEM_EVENT = 9;
}

message TenantActivityEvent {
  string tenant_id = 1;
  string user_id = 2;
  ActivityType activity_type = 3;
  string timestamp = 4;
  string resource_id = 5; // workflow_id, execution_id, etc.
  string action = 6;
  string description = 7;
  map<string, string> metadata = 8;
  string ip_address = 9;
  string user_agent = 10;
}

// Bidirectional Communication
message WorkflowCommand {
  string command_id = 1;
  string tenant_id = 2;
  string workflow_id = 3;
  string execution_id = 4; // optional
  WorkflowCommandType command_type = 5;
  map<string, string> parameters = 6;
  string timestamp = 7;
  string user_id = 8;
}

enum WorkflowCommandType {
  WORKFLOW_COMMAND_UNKNOWN = 0;
  START_EXECUTION = 1;
  STOP_EXECUTION = 2;
  PAUSE_EXECUTION = 3;
  RESUME_EXECUTION = 4;
  RESTART_EXECUTION = 5;
  SKIP_STEP = 6;
  RETRY_STEP = 7;
  UPDATE_VARIABLES = 8;
  SET_BREAKPOINT = 9;
  REMOVE_BREAKPOINT = 10;
  GET_EXECUTION_STATE = 11;
  SUBSCRIBE_TO_EVENTS = 12;
  UNSUBSCRIBE_FROM_EVENTS = 13;
}

message WorkflowResponse {
  string command_id = 1;
  string execution_id = 2;
  string workflow_id = 3;
  bool success = 4;
  string error_message = 5;
  string timestamp = 6;
  WorkflowResponseType response_type = 7;
  map<string, string> data = 8;
  ExecutionStatus execution_status = 9; // optional
}

enum WorkflowResponseType {
  WORKFLOW_RESPONSE_UNKNOWN = 0;
  COMMAND_ACKNOWLEDGED = 1;
  COMMAND_COMPLETED = 2;
  COMMAND_FAILED = 3;
  EXECUTION_STATE = 4;
  EVENT_NOTIFICATION = 5;
  HEARTBEAT = 6;
  CONNECTION_ESTABLISHED = 7;
  CONNECTION_CLOSED = 8;
}
